--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 30 22:11:07 BRT 2016
-sdk.dir=C\:\\Users\\Luis\\AppData\\Local\\Android\\sdk
+#Mon Mar 28 20:43:58 BRT 2016
+sdk.dir=C\:\\Users\\Luis-DELL\\AppData\\Local\\Android\\sdk
